python/test-data/testTypesSet4.err
Traceback (most recent call last):
  File "test-data/testTypesSet4.py", line 11, in <module>
    foo(set([func]))  # error
  File "test-data/testTypesSet4.py", line 6, in foo
    res.append(f())
WyppTypeError: set is not a set[Callable[[], str]]
given:    {<function <lambda> at 0x00>}
expected: value of type set[Callable[[], str]]

context: foo(l: set[Callable[[], str]]) -> list[str]
                ^^^^^^^^^^^^^^^^^^^^^^
declared at: test-data/testTypesSet4.py:3
caused by: test-data/testTypesSet4.py:11
  | foo(set([func]))  # error
